# mlops-immobilier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  commande.txt  compose.yaml  interface.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  python-tests.yml
data/mlruns/0/: meta.yaml
data/mlruns/730657038595321871/: meta.yaml
data/mlruns/730657038595321871/eb21be5416d34adf8139562b8386cc10/: meta.yaml
data/mlruns/730657038595321871/eb21be5416d34adf8139562b8386cc10/artifacts/sklearn-model/: MLmodel  conda.yaml  model.pkl  registered_model_meta
data/mlruns/730657038595321871/eb21be5416d34adf8139562b8386cc10/metrics/: mean_absolute_error  mean_squared_error  r2
data/mlruns/730657038595321871/eb21be5416d34adf8139562b8386cc10/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
data/mlruns/models/Production-model/: meta.yaml
data/mlruns/models/Production-model/version-1/: meta.yaml
imo/: train.py
notebooks/: Analyse_des_features.ipynb  data_drift_detection.ipynb  experimentations.ipynb  mlflow.db  shap.ipynb
src/: train.py
src/api/: app.py
src/interface/: Dockerfile  interface.py
src/ml/: train.py
tests/: test_api.py  test_interface.py  test_mlflow.py  test_train.py
