[tool.poetry]
name = "Projet-MLOps-imo-BM"
version = "0.1.0"
description = ""
authors = ["BrightMehou <joanemehou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.18.0"
scikit-learn = "^1.6.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
streamlit = "^1.41.1"
pytest = "^8.3.4"
llvmlite = "^0.43.0"
numba = "^0.60.0"
shap = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
