[tool.poetry]
name = "projet-mlops-imo-bm"
version = "0.1.0"
description = ""
authors = ["BrightMehou <joanemehou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["extras"], version = "^0.115.6"}
mlflow = "^2.19.0"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
